<resources>
    <string name="app_name">kitchen</string>
    <string name="input_name">Введите свое имя</string>
    <string name="add_text_button">добавить text</string>
    <string name="enter_text">Введите текст</string>
    <string name="add_view_button">добавить view</string>
    <string name="toolbar">Toolbar</string>
    <string name="movies">фильмы</string>
    <string name="serials">сериалы</string>
    <string name="search">search</string>
    <string name="coordinator">Coordinator</string>
    <string name="toolbar_activity">toolbar activity</string>
    <string name="text">Соображения высшего порядка, а также новая модель организационной деятельности играет важную роль в формировании новых предложений. Повседневная практика показывает, что рамки и место обучения кадров в значительной степени обуславливает создание ключевых компонентов планируемого обновления! С другой стороны реализация намеченного плана развития требует от нас системного анализа дальнейших направлений развитая системы массового участия!
        Практический опыт показывает, что дальнейшее развитие различных форм деятельности в значительной степени обуславливает создание направлений прогрессивного развития. Не следует, однако, забывать о том, что реализация намеченного плана развития способствует подготовке и реализации экономической целесообразности принимаемых решений! С другой стороны начало повседневной работы по формированию позиции обеспечивает широкому кругу специалистов участие в формировании существующих финансовых и административных условий. Не следует, однако, забывать о том, что рамки и место обучения кадров обеспечивает широкому кругу специалистов участие в формировании ключевых компонентов планируемого обновления.
        Практический опыт показывает, что консультация с профессионалами из IT требует определения и уточнения существующих финансовых и административных условий!
        Равным образом постоянное информационно-техническое обеспечение нашей деятельности способствует подготовке и реализации дальнейших направлений развитая системы массового участия. Разнообразный и богатый опыт рамки и место обучения кадров обеспечивает актуальность позиций, занимаемых участниками в отношении поставленных задач. Задача организации, в особенности же новая модель организационной деятельности создаёт предпосылки качественно новых шагов для…</string>
    <string name="search_expanded">search expanded</string>
    <string name="search_collapsed">search collapsed</string>
    <string name="parcelable">Parcelable</string>
    <string name="email_address">Введите почту</string>
    <string name="send_to">отправить</string>
    <string name="intent">intent</string>
</resources>