<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/inputEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_text"
        android:inputType="textShortMessage" />

    <EditText
        android:id="@+id/inputEditEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/sendToButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_to"
        android:textAlignment="center" />
</LinearLayout>